# zigblade

./: .gitignore  README.md
agent/: personality.py  report_generator.py  requirements.txt  zigblade_agent.py  zigblade_client.py  zigblade_mcp_server.py
docs/: AGENTIC_RESEARCH.md  DISPLAY_MOCKUPS.md  FEATURE_CHECKLIST.md  HARDWARE_BOM.md  PRODUCT.md  SETUP_GUIDE.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/components/hal/: CMakeLists.txt  ieee802154_hal.c
firmware/components/protocols/common/: CMakeLists.txt  crypto.c  crypto.h  frame_parser.c  frame_parser.h  pcap_writer.c  pcap_writer.h
firmware/components/protocols/matter/: CMakeLists.txt  matter_monitor.c  matter_monitor.h
firmware/components/protocols/thread/: CMakeLists.txt  thread_scanner.c  thread_scanner.h  thread_sniffer.c  thread_sniffer.h
firmware/components/protocols/wifi/: CMakeLists.txt  uart_bridge.c  uart_bridge.h  wifi_bridge.h
firmware/components/protocols/zigbee/: CMakeLists.txt  zigbee_injector.c  zigbee_injector.h  zigbee_install_code.c  zigbee_install_code.h  zigbee_scanner.c  zigbee_scanner.h  (+2 more)
firmware/components/ui/: CMakeLists.txt  display.c  display.h  font5x7.h  menu.c  menu.h  screens.c  screens.h
firmware/components/zigblade_hal/: CMakeLists.txt  ieee802154_hal.c  ieee802154_hal.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
tembed-firmware/: CMakeLists.txt  sdkconfig.defaults
tembed-firmware/main/: CMakeLists.txt  input.c  input.h  main.c  uart_master.c  uart_master.h  ui_tembed.c  ui_tembed.h  web_ui.c  web_ui.h
